@@ -43,6 +43,8 @@ namespace kt
 
 		virtual int rowCount(const QModelIndex & parent) const;
 		virtual QVariant data(const QModelIndex & index, int role) const;
+		virtual bool setData(const QModelIndex & index, const QVariant & value, int role);
+		virtual Qt::ItemFlags flags(const QModelIndex & index) const;
 		virtual bool removeRows(int row,int count,const QModelIndex & parent);
 		virtual bool insertRows(int row,int count,const QModelIndex & parent);
 		
